tests/baselines/reference/exportNonVisibleType.errors.txt
==== tests/cases/compiler/foo1.ts (1 errors) ====
    interface I1 {
        a: string;
        b: number;
    }
    
    var x: I1 = {a: "test", b: 42};
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! foo1.ts(6,5): error TS2027: Exported variable 'x' has or is using private type 'I1'.
    export = x; // Should fail, I1 not exported.
    
    
==== tests/cases/compiler/foo2.ts (1 errors) ====
    interface I1 {
        a: string;
        b: number;
    }
    
    class C1 {
        m1: I1;
     ~~~~~~~
!!! foo2.ts(7,2): error TS2025: Public property 'm1' of exported class has or is using private type 'I1'.
    }
    
    export = C1; // Should fail, type I1 of visible member C1.m1 not exported.
    
==== tests/cases/compiler/foo3.ts (0 errors) ====
    interface I1 {
        a: string;
        b: number;
    }
    
    class C1 {
        private m1: I1;
    }
    
    export = C1; // Should work, private type I1 of visible class C1 only used in private member m1.
    